@@ -1,10 +1,16 @@
 #
 # Build stage
 #
-FROM adoptopenjdk/openjdk16:debian as build-env
+FROM debian:latest as build-env
 
 RUN apt-get update && apt-get install -y python3-pip wget
 RUN pip3 install pandoc-plantuml-filter
+
+# make slim-jdk
+RUN wget https://download.java.net/java/GA/jdk17.0.2/dfd4a8d0985749f896bed50d7138ee7f/8/GPL/openjdk-17.0.2_linux-x64_bin.tar.gz -P /tmp/
+RUN tar xfvz /tmp/openjdk-17.0.2_linux-x64_bin.tar.gz -C /tmp/
+RUN /tmp/jdk-17.0.2/bin/jlink --output /opt/openjdk-17-slim \
+    --add-modules java.base,java.datatransfer,java.desktop,java.logging,java.prefs,java.scripting,java.xml
 
 # make plant UML
 
@@ -17,7 +23,7 @@ RUN chmod a+x /usr/bin/plantuml
 #
 # Run stage
 #
-FROM adoptopenjdk/openjdk16:debian as setup-env
+FROM debian:latest as setup-env
 
 RUN apt-get update && apt-get install -y python3 pandoc graphviz libfreetype6 fontconfig git \
     && apt-get clean \
